--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@
             <span class="column-text">семьи получили помощь</span>
             <a href="#" class="support-us">Поддержать нас</a>
         </div>
+        <div class="comment">
+            <span class="comment-title">Отзывы</span>
+            <div class="stub"></div>
+            <p class="comment-text">Я обратилась в фонд, когда пьяный муж выгнал меня с детьми на улицу...
+                <br>Сейчас мои дети живут со мной, старший пошел в школу, я
+                <br>трудоустроена. Огромное спасибо!</p>
+            <span class="comment-subscribe">Наталья Т.</span>
+        </div>
+        <div class="flow-money">
+            <span class="comment-title">На что пойдут деньги</span>
+            <a class="item1" href="#">Мамин дом</a>
+            <a class="item2" href="#">Дистанционный патронаж</a>
+            <a class="item3" href="#">Оплата труда специалистов</a>
+        </div>
 
 
 
