--- a/index.html
+++ b/index.html
@@ -41,13 +41,43 @@
                 <br>трудоустроена. Огромное спасибо!</p>
             <span class="comment-subscribe">Наталья Т.</span>
         </div>
-        <div class="flow-money">
+        <div class="flow-money clearfix">
             <span class="comment-title">На что пойдут деньги</span>
-            <a class="item1" href="#">Мамин дом</a>
-            <a class="item2" href="#">Дистанционный патронаж</a>
-            <a class="item3" href="#">Оплата труда специалистов</a>
+            <div class="item1">
+                <a class="heart" href="#"></a>
+                <span>Мамин дом</span>
+            </div>
+            <div class="item2">
+                <a class="note" href="#"></a>
+                <span>Дистанционный патронаж</span>
+            </div>
+            <div class="item3">
+                <a class="team" href="#"></a>
+                <span>Оплата труда специалистов</span>
+            </div>
         </div>
 
+        <div class="footer clearfix">
+            <span class="promo-text">Как я еще могу помочь?</span>
+            <div class="item4">
+                <a href="#" class="volonter"></a>
+                <span>Стать волонтером</span>
+            </div>
+            <div class="item5">
+                <a href="#" class="shirt"></a>
+                <span>Принести вещи</span>
+            </div>
+            <div class="item6">
+                <a href="#" class="rupor"></a>
+                <span>Рассказать о нас</span>
+            </div>
+
+            <div class="copyright">
+                <span class="copyright-text">Copyright &#169; 2016. Все права защищены</span>
+                <br>
+                <span>Дизайн разработан:genniaF_illustration</span>
+            </div>
+        </div>
 
 
     </div>
