--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#">Проекты<br>и акции</a></li>
                 <li><a href="#">Наши<br>друзья</a></li>
                 <li><a href="#">Документы</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="contact.html">Контакты</a></li>
             </ul>
             <p class="slogan">Дети не должны жить в детдоме,
                 <br>они хотят остаться со своей мамой.
