--- a/details-accounting.html
+++ b/details-accounting.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="container clearfix">
+    <div class="container-inner clearfix">
         <div class="top-left-column">
             <h1 class="index-title">Благотворительный фонд "Благие дела"</h1>
             <ul class="index-menu">
@@ -20,66 +20,31 @@
                 <li><a href="#">Наши<br>друзья</a></li>
                 <li><a href="#">Документы</a></li>
                 <li><a href="contact.html">Контакты</a></li>
-                <li><a href="details-accounting.html">Реквизиты</a></li>
+                <li><a class="active" href="details-accounting.html">Реквизиты</a></li>
             </ul>
-            <p class="slogan">Дети не должны жить в детдоме,
-                <br>они хотят остаться со своей мамой.
-                <br>Позвольте их мечтам сбываться!</p>
-            <a href="#" class="help">Помочь сейчас</a>
         </div>
-        <div class="middle-left-column">
-            <span class="date">Май 2015г.</span>
-            <span class="column-text">Официальная регистрация фонда</span>
-            <span class="num-1">156</span>
-            <span class="column-text">Общее число благополучателей за<br>1 год работы</span>
-            <span class="num-2">52</span>
-            <span class="column-text">семьи получили помощь</span>
-            <a href="#" class="support-us">Поддержать нас</a>
-        </div>
-        <div class="comment">
-            <span class="comment-title">Отзывы</span>
-            <div class="stub"></div>
-            <p class="comment-text">Я обратилась в фонд, когда пьяный муж выгнал меня с детьми на улицу...
-                <br>Сейчас мои дети живут со мной, старший пошел в школу, я
-                <br>трудоустроена. Огромное спасибо!</p>
-            <span class="comment-subscribe">Наталья Т.</span>
-        </div>
-        <div class="flow-money clearfix">
-            <span class="comment-title">На что пойдут деньги</span>
-            <div class="item1">
-                <a class="heart" href="#"></a>
-                <span>Мамин дом</span>
+        <a href="index.html" class="top-right-link"></a>
+        <p class="accounting-title">Социальное сиротство – это проблема, которую люди
+            <br> должны решать сообща! Это общая беда, и она касается всех.
+            <br>В первую очередь, она касается будущего ваших детей и внуков, потому именно им в последствие придется жить в том обществе, которое мы строим для них сейчас.</p>
+        <div class="accounting-row clearfix">
+            <div class="accounting-left-column">
+                <span class="column-title">Для частных пожертвований:</span>Сбербанк: 5469 6200 1816 6775
+                <br>Альфа-Банк: 4154 8220 5257 6579
+                <br>QIWI кошелек: +79510655550
+                <br>Яндекс-Деньги: 410012556408574
+                <br>Кошелек WebMoney: 051444142254
             </div>
-            <div class="item2">
-                <a class="note" href="#"></a>
-                <span>Дистанционный патронаж</span>
+            <div class="accounting-right-column">
+                <span class="column-title">Для юридических лиц:</span> БФ «Благие дела» ИНН/КПП 1655335024/165501001,
+                <br>Юридический адрес: 420012 г. Казань ул. Щапова, 26 корпус Б, офис 303
+                <br>Фактический адрес: 420006, г. Казань ул. Щапова, 26 корпус А, офис 305
+                <br>р/сч 40703810000000000216 в АО «Татсоцбанк» г. Казань
+                <br>КОР/СЧЕТ 30101810500000000703, БИК 049205703
             </div>
-            <div class="item3">
-                <a class="team" href="#"></a>
-                <span>Оплата труда специалистов</span>
-            </div>
-        </div>
+            <p>Равнодушию здесь места нет! Давайте вместе сделаем этот мир хоть немного лучше!</p>
 
-        <div class="footer clearfix">
-            <span class="promo-text">Как я еще могу помочь?</span>
-            <div class="item4">
-                <a href="#" class="volonter"></a>
-                <span>Стать волонтером</span>
-            </div>
-            <div class="item5">
-                <a href="#" class="shirt"></a>
-                <span>Принести вещи</span>
-            </div>
-            <div class="item6">
-                <a href="#" class="rupor"></a>
-                <span>Рассказать о нас</span>
-            </div>
 
-            <div class="copyright">
-                <span class="copyright-text">Copyright &#169; 2016. Все права защищены</span>
-                <br>
-                <span>Дизайн разработан:genniaF_illustration</span>
-            </div>
             <div class="social-btn">
                 <a class="vk" href="https://vk.com/blagiyedela">
                     <?xml version="1.0" ?>
@@ -113,10 +78,12 @@
                         </svg>
                 </a>
             </div>
+            <span class="copyright-text">Copyright &#169; 2016. Все права защищены</span>
         </div>
-
-
     </div>
+
+    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=U-TmAbr-ENmAFPjnzXXH_HUjX2nr12wZ&amp;width=960&amp;height=400&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=false;id=yandex-map">
+    </script>
 </body>
 
 </html>
