--- a/contact.html
+++ b/contact.html
@@ -20,21 +20,40 @@
                 <li><a href="#">Наши<br>друзья</a></li>
                 <li><a href="#">Документы</a></li>
                 <li><a class="active" href="contact.html">Контакты</a></li>
-                <li><a href="#">Реквизиты</a></li>
+                <li><a href="details-accounting.html">Реквизиты</a></li>
             </ul>
         </div>
         <a href="index.html" class="top-right-link"></a>
         <div class="contact">
             <span class="contact-title">Наши контакты:</span>
-
             <div class="our-contact">
                 <span>Адрес: 420012, г. Казань, ул. Щапова, 26</span>
-                <span>Часы работы: Пн-Пт: с 9:30 до 18:30</span>
                 <span>Телефон: +7 (937) 575-75-76</span>
-                <span>Эл. почта: <a href="mailto:pr.blagie.dela@gmail.com">pr.blagie.dela@gmail.com</a></span>
+                <span>Часы работы: Пн-Пт: с 9:30 до 18:30</span>
 
+                <!--                <span>E-mail: <a href="mailto:pr.blagie.dela@gmail.com">pr.blagie.dela@gmail.com</a></span>-->
             </div>
             <div class="map" id="yandex-map"></div>
+            <span class="contact-title">Есть вопросы? Напишите нам!</span>
+            <form action="send_mail.php" class="send-mail" method="post">
+                <div class="clearfix">
+                    <div class="field-wrapper">
+                        <label for="user_name">Ваше имя</label>
+                        <input type="text" id="user_name" name="user_name" placeholder="Представьтесь, пожалуйста!">
+                        <label for="user_email">Ваша почта</label>
+                        <input type="text" id="user_email" name="user_email" placeholder="Для отправки ответа">
+                        <label for="user_phone">Ваш телефон</label>
+                        <input type="text" id="user_phone" name="user_phone" placeholder="Для связи с Вами">
+                    </div>
+                    <div class="text-area-wrapper">
+                        <label for="user_message">Ваше сообщение</label>
+                        <textarea name="user_message" id="user_message" cols="30" rows="10" placeholder="В произвольной форме"></textarea>
+                    </div>
+                </div>
+                               <input type="submit" value="Отправить">
+                          </form>
+
+            <!--            
             <span class="contact-title">Наша команда:</span>
             <div class="our-team">
                 <div class="photo1"></div>
@@ -57,7 +76,7 @@
                 <span>Руководитель программы укрепления семьи</span>
                 <span>Тел.: +7 (937) 575-75-76</span>
                 <span>e-mail: <a href="mailto:pr.blagie.dela@gmail.com">pr.blagie.dela@gmail.com</a></span>
-            </div>
+            </div>-->
             <div class="social-btn">
                 <a class="vk" href="https://vk.com/blagiyedela">
                     <?xml version="1.0" ?>
@@ -95,7 +114,7 @@
         </div>
 
     </div>
-    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=U-TmAbr-ENmAFPjnzXXH_HUjX2nr12wZ&amp;width=1200&amp;height=600&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true;id=yandex-map">
+    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=U-TmAbr-ENmAFPjnzXXH_HUjX2nr12wZ&amp;width=960&amp;height=400&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=false;id=yandex-map">
     </script>
 </body>
 
