--- a/contact.html
+++ b/contact.html
@@ -50,8 +50,8 @@
                         <textarea name="user_message" id="user_message" cols="30" rows="10" placeholder="В произвольной форме"></textarea>
                     </div>
                 </div>
-                               <input type="submit" value="Отправить">
-                          </form>
+                <input type="submit" name="submit" value="Отправить">
+            </form>
 
             <!--            
             <span class="contact-title">Наша команда:</span>
