--- a/details-accounting.html
+++ b/details-accounting.html
@@ -13,7 +13,7 @@
         <div class="top-left-column">
             <h1 class="index-title">Благотворительный фонд "Благие дела"</h1>
             <ul class="index-menu">
-                <li><a href="#">О нас</a></li>
+                <li><a href="about.html">О нас</a></li>
                 <li><a href="#">Новости</a></li>
                 <li><a href="#">Пресса<br> о нас</a></li>
                 <li><a href="#">Проекты<br>и акции</a></li>
@@ -26,7 +26,7 @@
         <a href="index.html" class="top-right-link"></a>
         <p class="accounting-title">Социальное сиротство – это проблема, которую люди
             <br> должны решать сообща! Это общая беда, и она касается всех.
-            <br>В первую очередь, она касается будущего ваших детей и внуков, потому именно им в последствие придется жить в том обществе, которое мы строим для них сейчас.</p>
+            <br>В первую очередь, она касается будущего ваших детей и внуков, потому что именно им в последствие придется жить в том обществе, которое мы строим для них сейчас.</p>
         <div class="accounting-row clearfix">
             <div class="accounting-left-column">
                 <span class="column-title">Для частных пожертвований:</span>Сбербанк: 5469 6200 1816 6775
