--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="top-left-column">
             <h1 class="index-title">Благотворительный фонд "Благие дела"</h1>
             <ul class="index-menu">
-                <li><a href="#">О нас</a></li>
+                <li><a href="about.html">О нас</a></li>
                 <li><a href="#">Новости</a></li>
                 <li><a href="#">Пресса<br> о нас</a></li>
                 <li><a href="#">Проекты<br>и акции</a></li>
@@ -25,7 +25,7 @@
             <p class="slogan">Дети не должны жить в детдоме,
                 <br>они хотят остаться со своей мамой.
                 <br>Позвольте их мечтам сбываться!</p>
-            <a href="#" class="help">Помочь сейчас</a>
+            <a href="details-accounting.html" class="help">Помочь сейчас</a>
         </div>
         <div class="middle-left-column">
             <span class="date">Май 2015г.</span>
@@ -34,7 +34,7 @@
             <span class="column-text">Общее число благополучателей за<br>1 год работы</span>
             <span class="num-2">52</span>
             <span class="column-text">семьи получили помощь</span>
-            <a href="#" class="support-us">Поддержать нас</a>
+            <a href="details-accounting.html" class="support-us">Поддержать нас</a>
         </div>
         <div class="comment">
             <span class="comment-title">Отзывы</span>
