--- a/actions.html
+++ b/actions.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-    <div class="container clearfix">
+    <div class="container-inner clearfix">
         <div class="top-left-column">
             <h1 class="index-title">Благотворительный фонд <q>Благие дела</q></h1>
             <ul class="index-menu">
                 <li><a href="about.html">О нас</a></li>
                 <li><a href="#">Новости</a></li>
                 <li><a href="#">Пресса<br> о нас</a></li>
-                <li><a href="actions.html">Проекты<br>и акции</a></li>
+                <li><a class="active" href="actions.html">Проекты<br>и акции</a></li>
                 <li><a href="#">Наши<br>друзья</a></li>
                 <li onmouseover="showElem('document-submenu')" onmouseout="hiddenElem('document-submenu')"><a href="#">Документы</a>
                     <ul class="document-submenu" id="document-submenu">
@@ -26,69 +26,26 @@
                 <li><a href="contact.html">Контакты</a></li>
                 <li><a href="#">Истории<br>&nbsp;людей</a></li>
             </ul>
-
-            <p class="slogan">Дети не должны жить в детдоме,
-                <br>они хотят остаться со своей мамой.
-                <br>Позвольте их мечтам сбываться!</p>
-            <a href="details-accounting.html" class="help">Помочь сейчас</a>
         </div>
-        <div class="middle-left-column">
-            <span class="date">Май 2015г.</span>
-            <span class="column-text">Официальная регистрация фонда</span>
-            <span class="num-1">156</span>
-            <span class="column-text">Общее число благополучателей за<br>1 год работы</span>
-            <span class="num-2">52</span>
-            <span class="column-text">семьи получили помощь</span>
-            <a href="details-accounting.html" class="support-us">Поддержать нас</a>
-        </div>
-        <div class="comment">
-            <span class="comment-title">Отзывы</span>
-            <div class="stub"></div>
-            <p class="comment-text">Я обратилась в фонд, когда пьяный муж выгнал меня с детьми на улицу...
-                <br>Сейчас мои дети живут со мной, старший пошел в школу, я
-                <br>трудоустроена. Огромное спасибо!</p>
-            <span class="comment-subscribe">Наталья Т.</span>
-        </div>
-        <div class="flow-money clearfix">
-            <span class="comment-title">На что пойдут деньги</span>
-            <div class="item1">
-                <a class="heart" href="#"></a>
-                <span>Мамин дом</span>
+        <a href="index.html" class="top-right-link"></a>
+        <div class="contact">
+            <span class="contact-title">Текущие акции</span>
+            <div class="actions-item clearfix">
+                <span class="actions-item-title">Благотворительная акция «Благотворительность вместо сувениров»</span>
+                <img src="img/santa-claus.png" alt="" width="100" height="116">
+                <p>Ежегодно различные компании и учреждения тратят немалые бюджеты на милые безделушки с логотипами на подарки партнёрам. Почему бы не потратить часть «сувенирных» денег на доброе дело?</p>
+                <a href="proect-actions/action-charity-instead-souvenir.html" class="action-item-more">Подробнее</a>
             </div>
-            <div class="item2">
-                <a class="note" href="#"></a>
-                <span>Дистанционный патронаж</span>
-            </div>
-            <div class="item3">
-                <a class="team" href="#"></a>
-                <span>Оплата труда специалистов</span>
-            </div>
-        </div>
-
-        <div class="footer clearfix">
-            <span class="promo-text">Как я еще могу помочь?</span>
-            <div class="item4">
-                <a href="#" class="volonter"></a>
-                <span>Стать волонтером</span>
-            </div>
-            <div class="item5">
-                <a href="#" class="shirt"></a>
-                <span>Принести вещи</span>
-            </div>
-            <div class="item6">
-                <a href="#" class="rupor"></a>
-                <span>Рассказать о нас</span>
+            <div class="actions-item clearfix">
+                <span class="actions-item-title">Благотворительный фуршет «Новый год в кругу семьи»</span>
+                <img src="img/newyear-ball.jpg" alt="" width="100" height="149">
+                <p>Воскресный вечер можно провести по-разному. Можно пойти в кино, можно устроить прогулку по городу. А можно не только весело провести время, но и сделать доброе дело. Приглашаем на благотворительный фуршет, организованный Благотворительным фондом «Благие дела» и рестораном «Фиолет» в помощь подопечной семье Сираевых.
+                </p>
+                <a href="proect-actions/action-newyear-with-family.html" class="action-item-more">Подробнее</a>
             </div>
 
-            <div class="copyright">
-                <span class="copyright-text">Copyright &#169; 2016. Все права защищены</span>
-                <br>
-                <span>Дизайн разработан:genniaF_illustration</span>
-            </div>
             <div class="social-btn">
                 <a class="vk" href="https://vk.com/blagiyedela">
-                    <!--                    <?xml version="1.0" ?>-->
-                    <!--                        <!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>-->
                     <svg id="Capa_1" style="enable-background:new 0 0 112.196 112.196;" version="1.1" viewBox="0 0 112.196 112.196" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <g>
                             <g>
@@ -118,8 +75,8 @@
                     </svg>
                 </a>
             </div>
+            <span class="copyright-text">Copyright &#169; 2016. Все права защищены</span>
         </div>
-
 
     </div>
     <script src="js/site-script.js"></script>
