--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -11,16 +11,20 @@
 <body>
     <div class="container-inner clearfix">
         <div class="top-left-column">
-            <h1 class="index-title">Благотворительный фонд "Благие дела"</h1>
+            <h1 class="index-title">Благотворительный фонд <q>Благие дела</q></h1>
             <ul class="index-menu">
-                <li><a class="active" href="about.html">О нас</a></li>
+                <li><a class="active" href="#">О нас</a></li>
                 <li><a href="#">Новости</a></li>
                 <li><a href="#">Пресса<br> о нас</a></li>
-                <li><a href="#">Проекты<br>и акции</a></li>
+                <li><a href="actions.html">Проекты<br>и акции</a></li>
                 <li><a href="#">Наши<br>друзья</a></li>
-                <li><a href="#">Документы</a></li>
+                <li onmouseover="showElem('document-submenu')" onmouseout="hiddenElem('document-submenu')"><a href="#">Документы</a>
+                    <ul class="document-submenu" id="document-submenu">
+                        <li><a href="details-accounting.html">Реквизиты</a></li>
+                    </ul>
+                </li>
                 <li><a href="contact.html">Контакты</a></li>
-                <li><a href="details-accounting.html">Реквизиты</a></li>
+                <li><a href="#">Истории<br>&nbsp;людей</a></li>
             </ul>
         </div>
         <a href="index.html" class="top-right-link"></a>
@@ -31,15 +35,15 @@
                 <span>Байназарова Алия Ильгизовна</span>
                 <span>Президент Благотворительного фонда<br> «Благие дела»</span>
                 <span>Тел.: +7 (951) 065-55-50</span>
-                <span>e-mail: <a href="mailto:fund.blagie.dela@gmail.com">fund.blagie.dela@gmail.com</a></span>
+                <span>e-mail: <a href="mailto:fund.blagie.dela@gmail.com" title="Написать письмо">fund.blagie.dela@gmail.com</a></span>
             </div>
             <div class="our-team">
                 <div class="photo2"></div>
                 <span>Саможенова Евита Ивановна</span>
                 <span>Специалист по развитию</span>
                 <br>
-                <span>Тел.: +7 (917) 286-79-37</span>
-                <span>e-mail: <a href="mailto:pr.blagie.dela@gmail.com">pr.blagie.dela@gmail.com</a></span>
+                <span>Тел.: +7 (939) 337-27-02</span>
+                <span>e-mail: <a href="mailto:pr.blagie.dela@gmail.com" title="Написать письмо">pr.blagie.dela@gmail.com</a></span>
             </div>
             <div class="our-team">
                 <div class="photo3"></div>
@@ -47,7 +51,7 @@
                 <span>Руководитель программы укрепления семьи</span>
                 <br>
                 <span>Тел.: +7 (937) 575-75-76</span>
-                <span>e-mail: <a href="mailto:pr.blagie.dela@gmail.com">pr.blagie.dela@gmail.com</a></span>
+                <span>e-mail: <a href="mailto:pr.blagie.dela@gmail.com" title="Написать письмо">pr.blagie.dela@gmail.com</a></span>
             </div>
             <h2 class="about-title">О нас</h2>
             <p>Благотворительный фонд «Благие дела» существует с 2015 года. Основное направление Фонда – профилактика социального сиротства. Мы работаем над сохранением семей, помогаем родителям, по тем или иным причинам оказавшимся в трудной жизненной ситуации, вернуться в нормальную жизнь, обрести возможность воспитывать своего ребенка самостоятельно, вновь почувствовать ответственность за него. Зачастую это матери, которые остались совсем одни и лишены помощи близких.</p>
@@ -74,16 +78,16 @@
             <p class="about-slogan">Когда мы перестаем бороться друг за друга, мы теряем то, что делает нас людьми!</p>
             <div class="social-btn">
                 <a class="vk" href="https://vk.com/blagiyedela">
-                    <?xml version="1.0" ?>
-                        <!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
-                        <svg id="Capa_1" style="enable-background:new 0 0 112.196 112.196;" version="1.1" viewBox="0 0 112.196 112.196" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <!--                    <?xml version="1.0" ?>-->
+                    <!--                        <!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>-->
+                    <svg id="Capa_1" style="enable-background:new 0 0 112.196 112.196;" version="1.1" viewBox="0 0 112.196 112.196" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <g>
                             <g>
-                                <g>
-                                    <circle cx="56.098" cy="56.098" id="XMLID_11_" r="56.098" style="fill:#4D76A1;" />
-                                </g>
-                                <path d="M53.979,80.702h4.403c0,0,1.33-0.146,2.009-0.878   c0.625-0.672,0.605-1.934,0.605-1.934s-0.086-5.908,2.656-6.778c2.703-0.857,6.174,5.71,9.853,8.235   c2.782,1.911,4.896,1.492,4.896,1.492l9.837-0.137c0,0,5.146-0.317,2.706-4.363c-0.2-0.331-1.421-2.993-7.314-8.463   c-6.168-5.725-5.342-4.799,2.088-14.702c4.525-6.031,6.334-9.713,5.769-11.29c-0.539-1.502-3.867-1.105-3.867-1.105l-11.076,0.069   c0,0-0.821-0.112-1.43,0.252c-0.595,0.357-0.978,1.189-0.978,1.189s-1.753,4.667-4.091,8.636c-4.932,8.375-6.904,8.817-7.71,8.297   c-1.875-1.212-1.407-4.869-1.407-7.467c0-8.116,1.231-11.5-2.397-12.376c-1.204-0.291-2.09-0.483-5.169-0.514   c-3.952-0.041-7.297,0.012-9.191,0.94c-1.26,0.617-2.232,1.992-1.64,2.071c0.732,0.098,2.39,0.447,3.269,1.644   c1.135,1.544,1.095,5.012,1.095,5.012s0.652,9.554-1.523,10.741c-1.493,0.814-3.541-0.848-7.938-8.446   c-2.253-3.892-3.954-8.194-3.954-8.194s-0.328-0.804-0.913-1.234c-0.71-0.521-1.702-0.687-1.702-0.687l-10.525,0.069   c0,0-1.58,0.044-2.16,0.731c-0.516,0.611-0.041,1.875-0.041,1.875s8.24,19.278,17.57,28.993   C44.264,81.287,53.979,80.702,53.979,80.702L53.979,80.702z" style="fill-rule:evenodd;clip-rule:evenodd;fill:#FFFFFF;" />
+                                <circle cx="56.098" cy="56.098" id="XMLID_11_" r="56.098" style="fill:#4D76A1;" />
                             </g>
-                        </svg>
+                            <path d="M53.979,80.702h4.403c0,0,1.33-0.146,2.009-0.878   c0.625-0.672,0.605-1.934,0.605-1.934s-0.086-5.908,2.656-6.778c2.703-0.857,6.174,5.71,9.853,8.235   c2.782,1.911,4.896,1.492,4.896,1.492l9.837-0.137c0,0,5.146-0.317,2.706-4.363c-0.2-0.331-1.421-2.993-7.314-8.463   c-6.168-5.725-5.342-4.799,2.088-14.702c4.525-6.031,6.334-9.713,5.769-11.29c-0.539-1.502-3.867-1.105-3.867-1.105l-11.076,0.069   c0,0-0.821-0.112-1.43,0.252c-0.595,0.357-0.978,1.189-0.978,1.189s-1.753,4.667-4.091,8.636c-4.932,8.375-6.904,8.817-7.71,8.297   c-1.875-1.212-1.407-4.869-1.407-7.467c0-8.116,1.231-11.5-2.397-12.376c-1.204-0.291-2.09-0.483-5.169-0.514   c-3.952-0.041-7.297,0.012-9.191,0.94c-1.26,0.617-2.232,1.992-1.64,2.071c0.732,0.098,2.39,0.447,3.269,1.644   c1.135,1.544,1.095,5.012,1.095,5.012s0.652,9.554-1.523,10.741c-1.493,0.814-3.541-0.848-7.938-8.446   c-2.253-3.892-3.954-8.194-3.954-8.194s-0.328-0.804-0.913-1.234c-0.71-0.521-1.702-0.687-1.702-0.687l-10.525,0.069   c0,0-1.58,0.044-2.16,0.731c-0.516,0.611-0.041,1.875-0.041,1.875s8.24,19.278,17.57,28.993   C44.264,81.287,53.979,80.702,53.979,80.702L53.979,80.702z" style="fill-rule:evenodd;clip-rule:evenodd;fill:#FFFFFF;" />
+                        </g>
+                    </svg>
                 </a>
                 <a class="fb" href="https://www.facebook.com/%D0%91%D0%BB%D0%B0%D0%B3%D0%BE%D1%82%D0%B2%D0%BE%D1%80%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9-%D0%A4%D0%BE%D0%BD%D0%B4-%D0%91%D0%BB%D0%B0%D0%B3%D0%B8%D0%B5-%D0%B4%D0%B5%D0%BB%D0%B0-499031533612417/?ref=bookmarks">
                     <?xml version="1.0" ?>
@@ -109,6 +113,7 @@
         </div>
 
     </div>
+    <script src="js/site-script.js"></script>
 </body>
 
 </html>
