--- a/details-accounting.html
+++ b/details-accounting.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -11,16 +11,20 @@
 <body>
     <div class="container-inner clearfix">
         <div class="top-left-column">
-            <h1 class="index-title">Благотворительный фонд "Благие дела"</h1>
+            <h1 class="index-title">Благотворительный фонд <q>Благие дела</q></h1>
             <ul class="index-menu">
                 <li><a href="about.html">О нас</a></li>
                 <li><a href="#">Новости</a></li>
                 <li><a href="#">Пресса<br> о нас</a></li>
-                <li><a href="#">Проекты<br>и акции</a></li>
+                <li><a href="actions.html">Проекты<br>и акции</a></li>
                 <li><a href="#">Наши<br>друзья</a></li>
-                <li><a href="#">Документы</a></li>
+                <li onmouseover="showElem('document-submenu')" onmouseout="hiddenElem('document-submenu')"><a href="#">Документы</a>
+                    <ul class="document-submenu" id="document-submenu">
+                        <li><a class="active" href="details-accounting.html">Реквизиты</a></li>
+                    </ul>
+                </li>
                 <li><a href="contact.html">Контакты</a></li>
-                <li><a class="active" href="details-accounting.html">Реквизиты</a></li>
+                <li><a href="#">Истории<br>&nbsp;людей</a></li>
             </ul>
         </div>
         <a href="index.html" class="top-right-link"></a>
@@ -81,9 +85,7 @@
             <span class="copyright-text">Copyright &#169; 2016. Все права защищены</span>
         </div>
     </div>
-
-    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=U-TmAbr-ENmAFPjnzXXH_HUjX2nr12wZ&amp;width=960&amp;height=400&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=false;id=yandex-map">
-    </script>
+    <script src="js/site-script.js"></script>
 </body>
 
 </html>
