--- a/about.html
+++ b/about.html
@@ -31,14 +31,18 @@
         <div class="contact">
             <h2 class="about-title">Наша команда:</h2>
             <div class="our-team">
-                <div class="photo1"></div>
+                <div class="photo">
+                    <img src="img/alija.jpg" width="200" height="200" alt="Байназарова Алия Ильгизовна" title="Байназарова Алия Ильгизовна">
+                </div>
                 <span>Байназарова Алия Ильгизовна</span>
                 <span>Президент Благотворительного фонда<br> «Благие дела»</span>
                 <span>Тел.: +7 (951) 065-55-50</span>
                 <span>e-mail: <a href="mailto:fund.blagie.dela@gmail.com" title="Написать письмо">fund.blagie.dela@gmail.com</a></span>
             </div>
             <div class="our-team">
-                <div class="photo2"></div>
+                <div class="photo">
+                    <img src="img/evita.jpg" width="200" height="200" alt="Саможенова Евита Ивановна" title="Саможенова Евита Ивановна">
+                </div>
                 <span>Саможенова Евита Ивановна</span>
                 <span>Специалист по развитию</span>
                 <br>
@@ -46,7 +50,9 @@
                 <span>e-mail: <a href="mailto:pr.blagie.dela@gmail.com" title="Написать письмо">pr.blagie.dela@gmail.com</a></span>
             </div>
             <div class="our-team">
-                <div class="photo3"></div>
+                <div class="photo">
+                    <img src="img/nailja.jpg" width="200" height="200" alt="Халитова Наиля Ильшатовна" title="Халитова Наиля Ильшатовна">
+                </div>
                 <span>Халитова Наиля Ильшатовна</span>
                 <span>Руководитель программы укрепления семьи</span>
                 <br>
