--- a/proect-actions/action-charity-instead-souvenir.html
+++ b/proect-actions/action-charity-instead-souvenir.html
@@ -31,40 +31,46 @@
         <div class="contact">
             <span class="contact-title">Благотворительность вместо сувениров</span>
             <div class="actions-item clearfix">
-                <span class="actions-item-title">Задумайтесь!</span>
+                <span class="actions-item-title big-title">Задумайтесь!</span>
                 <img src="../img/santa-claus.png" alt="" width="100" height="116">
                 <p>По экспертным оценкам, бюджеты корпоративных подарков в России доходят до 650 000 долларов. Эти деньги ежегодно «инвестируются» в бесчисленные календари, ежедневники, дорогой алкоголь…В то же время некоммерческие организации, помогающие десяткам тысяч нуждающихся – детям, которым угрожает опасность оказаться в детском доме при живых родителях, детям-инвалидам… – не имеют достаточных средств. Элитное вино или детская судьба? Мы выбираем добрые дела и готовы дарить надежду, а это значит – выбираем социально ответственную позицию.</p>
                 <div class="action-item-divider"></div>
             </div>
 
             <div class="actions-item clearfix">
+                <span class="actions-item-title big-title">Настоящие подарки</span>
                 <span class="actions-item-title">Дарите радость тем, кто в ней нуждается!</span>
                 <img src="../img/instead-souvenir.png" alt="" width="100" height="103">
                 <p>Источник привлеченных пожертвований – корпоративные сувенирные бюджеты, то есть средства, предназначенные на подарки от имени компании. Как показывают исследования, большинство получателей традиционных корпоративных сувениров не испытывают признательности дарителю, а дарители не ощущают эффекта от этих масштабных вложений. Развивая инициативу, мы понимаем: благотворительность придает праздникам новый смысл. Когда место традиционных бизнес-сувениров занимает благотворительность – компания делает настоящие подарки, и те, кому они предназначены, по-настоящему благодарны дарителю.</p>
                 <div class="action-item-divider"></div>
             </div>
             <div class="actions-item clearfix">
+                <span class="actions-item-title big-title">Выбор сотен компаний</span>
                 <span class="actions-item-title">Присоединяйтесь!</span>
                 <img src="../img/instead-souvenir.png" alt="" width="100" height="103">
                 <p>Каждый год все больше компаний перечисляют новогодние «сувенирные» бюджеты на благотворительные цели. За восемь лет уже более 700 российских компаний поддержали акцию «Благотворительность вместо сувениров», что помогло решить социальные проблемы в различных сферах.</p>
                 <div class="action-item-divider"></div>
             </div>
             <div class="actions-item clearfix">
+                <span class="actions-item-title big-title">Зачем компаниям участвовать в акции?</span>
                 <span class="actions-item-title">Выигрывают все!</span>
                 <img src="../img/instead-souvenir.png" alt="" width="100" height="103">
-                <p>Это прекрасная возможность в условиях сокращения бюджетов (в том числе и благотворительных), не отказываться от добрых дел, а правильно распорядиться средствами и направить их тем, кто сегодня – как никогда – нуждается в поддержке. Подарки могут приносить настоящую радость! Это понимают и ваши партнеры, получившие красочную, дизайнерскую открытку с информацией о добром деле вместо традиционных календарей и ежедневников.
+                <p>Это прекрасная возможность в условиях сокращения бюджетов (в том числе и благотворительных), не отказываться от добрых дел, а правильно распорядиться средствами и направить их тем, кто сегодня – как никогда – нуждается в поддержке.</p>
+                <span class="actions-item-title">Подарки могут приносить настоящую радость!</span>
+                <p>Это понимают и ваши партнеры, получившие красочную, дизайнерскую открытку с информацией о добром деле вместо традиционных календарей и ежедневников.
                 </p>
                 <div class="action-item-divider"></div>
             </div>
             <div class="actions-item clearfix">
-                <span class="actions-item-title">Не существует минимальной суммы сувенирного бюджета</span>
+                <span class="actions-item-title big-title">Не существует минимальной суммы сувенирного бюджета</span>
+                <span class="actions-item-title">Это может быть десять тысяч рублей или сотни тысяч</span>
                 <img src="../img/instead-souvenir.png" alt="" width="100" height="103">
-                <p>Это может быть десять тысяч рублей или сотни тысяч. Партнеры и клиенты, получившие открытку вместо подарка, чувствуют свою причастность к доброму делу и рады возможности оказать помощь нуждающимся, пусть и опосредованно.Компания, направившая сувенирный бюджет на благотворительность, сама определяет кого и как информировать об участии в инициативе (сайт, открытки, информационные материалы). Ваше пожертвование сделает возможным самое большое чудо в мире, когда ребенок обретет дом, семью, и ему не нужно будет отвыкать от слова “мама”! Проводим старый год добрыми делами!
+                <p> Партнеры и клиенты, получившие открытку вместо подарка, чувствуют свою причастность к доброму делу и рады возможности оказать помощь нуждающимся, пусть и опосредованно.Компания, направившая сувенирный бюджет на благотворительность, сама определяет кого и как информировать об участии в инициативе (сайт, открытки, информационные материалы). Ваше пожертвование сделает возможным самое большое чудо в мире, когда ребенок обретет дом, семью, и ему не нужно будет отвыкать от слова “мама”! Проводим старый год добрыми делами!
                 </p>
                 <div class="action-item-divider"></div>
             </div>
             <div class="detail-accounting">
-                <span class="actions-item-title">Вы можете перечислить сумму, которую посчитаете нужным, по следующим реквизитам:</span> БФ «Благие дела»
+                <span class="actions-item-title big-title">Вы можете перечислить сумму, которую посчитаете нужным, по следующим реквизитам:</span> БФ «Благие дела»
                 <br>ИНН/КПП 1655335024/165501001,
                 <br>Юридический адрес: 420012 г. Казань ул. Щапова, 26 корпус Б, офис 303
                 <br>Фактический адрес: 420006, г. Казань ул. Щапова, 26 корпус А, офис 305
