--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                     </ul>
                 </li>
                 <li><a href="contact.html">Контакты</a></li>
-                <li><a href="#">Истории<br>&nbsp;людей</a></li>
+                <li><a href="our-history.html">Истории<br>&nbsp;людей</a></li>
             </ul>
         </div>
         <a href="index.html" class="top-right-link"></a>
