--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
                     </ul>
                 </li>
                 <li><a class="active" href="#">Контакты</a></li>
-                <li><a href="#">Истории<br>&nbsp;людей</a></li>
+                <li><a href="our-history.html">Истории<br>&nbsp;людей</a></li>
             </ul>
         </div>
         <a href="index.html" class="top-right-link"></a>
