--- a/proect-actions/action-charity-instead-souvenir.html
+++ b/proect-actions/action-charity-instead-souvenir.html
@@ -16,7 +16,7 @@
                 <li><a href="../about.html">О нас</a></li>
                 <li><a href="#">Новости</a></li>
                 <li><a href="#">Пресса<br> о нас</a></li>
-                <li><a href="../actions.html">Проекты<br>и акции</a></li>
+                <li><a class="active" href="../actions.html">Проекты<br>и акции</a></li>
                 <li><a href="#">Наши<br>друзья</a></li>
                 <li onmouseover="showElem('document-submenu')" onmouseout="hiddenElem('document-submenu')"><a href="#">Документы</a>
                     <ul class="document-submenu" id="document-submenu">
@@ -24,7 +24,12 @@
                     </ul>
                 </li>
                 <li><a href="../contact.html">Контакты</a></li>
-                <li><a href="#">Истории<br>&nbsp;людей</a></li>
+                <li><a href="../our-history.html">Истории<br>&nbsp;людей</a></li>
+            </ul>
+            <ul class="breadscrumbs">
+                <li><a class="active" href="../actions.html">Проекты и акции</a></li>
+                <li>&gt;</li>
+                <li>Благотворительность вместо сувениров</li>
             </ul>
         </div>
         <a href="../index.html" class="top-right-link"></a>
