--- a/proect-actions/action-newyear-with-family.html
+++ b/proect-actions/action-newyear-with-family.html
@@ -16,7 +16,7 @@
                 <li><a href="../about.html">О нас</a></li>
                 <li><a href="#">Новости</a></li>
                 <li><a href="#">Пресса<br> о нас</a></li>
-                <li><a href="../actions.html">Проекты<br>и акции</a></li>
+                <li><a class="active" href="../actions.html">Проекты<br>и акции</a></li>
                 <li><a href="#">Наши<br>друзья</a></li>
                 <li onmouseover="showElem('document-submenu')" onmouseout="hiddenElem('document-submenu')"><a href="#">Документы</a>
                     <ul class="document-submenu" id="document-submenu">
@@ -24,12 +24,17 @@
                     </ul>
                 </li>
                 <li><a href="../contact.html">Контакты</a></li>
-                <li><a href="#">Истории<br>&nbsp;людей</a></li>
+                <li><a href="../our-history.html">Истории<br>&nbsp;людей</a></li>
+            </ul>
+            <ul class="breadscrumbs">
+                <li><a class="active" href="../actions.html">Проекты и акции</a></li>
+                <li>&gt;</li>
+                <li>Благотворительный фуршет</li>
             </ul>
         </div>
         <a href="../index.html" class="top-right-link"></a>
         <div class="contact">
-            <span class="action-newyear-title">Благотворительный фуршет </span>
+            <span class="action-newyear-title">Благотворительный фуршет</span>
             <span class="action-newyear-title">«Новый год в кругу семьи»</span>
             <div class="action-newyear-top clearfix">
                 <img src="../img/newyear-ball-furshet.jpg" alt="" width="250" height="373">
@@ -46,14 +51,6 @@
             </div>
             <div class="furshet-title"></div>
             <div class="action-newyear-bottom">
-                <p>На фуршет можно прийти одному, а можно пригласить свою вторую половину.</p>
-                <p>Форма одежды свободная</p>
-                <p><b>Входной билет:</b></p>
-                <p>Индивидуальное участие – <b>4000 рублей.</b></p>
-                <p>Семейные пары – 7000 рублей<b>&nbsp;(3500 рублей с человека).</b></p>
-                <p>Всем участникам приятные сувениры и благодарственные письма от Благотворительного фонда «Благие дела».</p>
-                <p><b>Взносы можно сделать уже сейчас через ресторан «Фиолет» или позвонив по телефонам:</b></p>
-                <p>+7 (951) 065-55-50 (Байназарова Алия), +7 (917) 286-79-37 (Саможенова Евита).</p>
                 <p><b>Благотворительный фуршет пройдёт в ресторане «Фиолет» по адресу Спартаковская, 2.</b></p>
                 <p>Собранные на мероприятии средства пойдут на медикаменты и аппаратное обеспечение подопечных Фонда
                     <br>4-ёх летнего Тамерлана Сираева и его матери Сираевой Лейсан Ильфатовны. И мать, и сын страдают множеством серьезных заболеваний, но Лейсан не сдается. Она забыла про проблемы со здоровьем и изо всех сил старается заработать на лечение и поддерживающие процедуры для маленького Тимура.</p>
@@ -63,11 +60,25 @@
                     <li>Аукцион детских новогодних желаний «Стань Дедом Морозом»</li>
                     <li>Музыкальная программа.</li>
                 </ul>
-                <p>1</p>
-                <p>2</p>
-                <p>3</p>
-                <p>4</p>
-                <p>5</p>
+                <p>На фуршет можно прийти одному, а можно пригласить свою вторую половину.</p>
+                <p>Форма одежды свободная</p>
+                <p><b>Входной билет:</b></p>
+                <p>Индивидуальное участие – <b>4000 рублей.</b></p>
+                <p>Семейные пары – 7000 рублей<b>&nbsp;(3500 рублей с человека).</b></p>
+                <p>Всем участникам приятные сувениры и благодарственные письма от Благотворительного фонда «Благие дела».</p>
+                <p><b>Взносы можно сделать уже сейчас через ресторан «Фиолет», или позвонив по телефонам:</b></p>
+                <p>+7 (951) 065-55-50 (Байназарова Алия), +7 (917) 286-79-37 (Саможенова Евита).</p>
+                <p><b>Также можно перечислить взносы по следующим реквизитам:</b></p>
+                <p>Сбербанк: 5469 6200 1816 6775
+                    <br> Альфа-Банк: 4154 8220 5257 6579
+                    <br> QIWI кошелек +79510655550
+                    <br> Яндекс-Деньги: 410012556408574
+                    <br> Кошелек WebMoney 051444142254
+                </p>
+                <p><b>В назначении платежа укажите «Взнос в пользу семьи Сираевых. Фуршет»<br>Взамен курьер доставит вам пригласительный билет, по которому вы сможете посетить мероприятие.</b></p>
+                <p>Просьба подтвердить участие до 15 декабря 2016 года по адресу: <a href="mailto:pr.blagie.dela@gmail.com" title="Написать письмо">pr.blagie.dela@gmail.com</a>
+                    <br>Либо по телефону: +7 (951) 065-55-50 (Байназарова Алия), +7 (917) 286-79-37 (Саможенова Евита).
+                </p>
             </div>
             <div class="logo-partners"></div>
 
