--- a/details-accounting.html
+++ b/details-accounting.html
@@ -18,13 +18,18 @@
                 <li><a href="#">Пресса<br> о нас</a></li>
                 <li><a href="actions.html">Проекты<br>и акции</a></li>
                 <li><a href="#">Наши<br>друзья</a></li>
-                <li onmouseover="showElem('document-submenu')" onmouseout="hiddenElem('document-submenu')"><a href="#">Документы</a>
+                <li onmouseover="showElem('document-submenu')" onmouseout="hiddenElem('document-submenu')"><a class="active" href="#">Документы</a>
                     <ul class="document-submenu" id="document-submenu">
-                        <li><a class="active" href="details-accounting.html">Реквизиты</a></li>
+                        <li><a href="details-accounting.html">Реквизиты</a></li>
                     </ul>
                 </li>
                 <li><a href="contact.html">Контакты</a></li>
-                <li><a href="#">Истории<br>&nbsp;людей</a></li>
+                <li><a href="our-history.html">Истории<br>&nbsp;людей</a></li>
+            </ul>
+            <ul class="breadscrumbs">
+                <li><a class="active" href="../actions.html">Документы</a></li>
+                <li>&gt;</li>
+                <li>Реквизиты</li>
             </ul>
         </div>
         <a href="index.html" class="top-right-link"></a>
