--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </ul>
                 </li>
                 <li><a href="contact.html">Контакты</a></li>
-                <li><a href="#">Истории<br>&nbsp;людей</a></li>
+                <li><a href="our-history.html">Истории<br>&nbsp;людей</a></li>
             </ul>
 
             <p class="slogan">Дети не должны жить в детдоме,
