--- a/about.html
+++ b/about.html
@@ -18,13 +18,15 @@
                 <li><a href="#">Пресса<br> о нас</a></li>
                 <li><a href="actions.html">Проекты<br>и акции</a></li>
                 <li><a href="#">Наши<br>друзья</a></li>
+                <li><a href="our-history.html">Истории<br>&nbsp;людей</a></li>
+                <li><a href="contact.html">Контакты</a></li>
                 <li onmouseover="showElem('document-submenu')" onmouseout="hiddenElem('document-submenu')"><a href="#">Документы</a>
                     <ul class="document-submenu" id="document-submenu">
-                        <li><a href="details-accounting.html">Реквизиты</a></li>
+                        <li><a href="doc/details-accounting.html">Реквизиты</a></li>
+                        <li><a href="doc/oferta.docx" target="_blank">Договор оферты</a></li>
+                        <li><a href="doc/doc-list.html">Учредительные документы</a></li>
                     </ul>
                 </li>
-                <li><a href="contact.html">Контакты</a></li>
-                <li><a href="our-history.html">Истории<br>&nbsp;людей</a></li>
             </ul>
         </div>
         <a href="index.html" class="top-right-link"></a>
