--- a/index.html
+++ b/index.html
@@ -18,19 +18,21 @@
                 <li><a href="#">Пресса<br> о нас</a></li>
                 <li><a href="actions.html">Проекты<br>и акции</a></li>
                 <li><a href="#">Наши<br>друзья</a></li>
+                <li><a href="our-history.html">Истории<br>&nbsp;людей</a></li>
+                <li><a href="contact.html">Контакты</a></li>
                 <li onmouseover="showElem('document-submenu')" onmouseout="hiddenElem('document-submenu')"><a href="#">Документы</a>
                     <ul class="document-submenu" id="document-submenu">
-                        <li><a href="details-accounting.html">Реквизиты</a></li>
+                        <li><a href="doc/details-accounting.html">Реквизиты</a></li>
+                        <li><a href="doc/oferta.docx" target="_blank">Договор оферты</a></li>
+                        <li><a href="doc/doc-list.html">Учредительные документы</a></li>
                     </ul>
                 </li>
-                <li><a href="contact.html">Контакты</a></li>
-                <li><a href="our-history.html">Истории<br>&nbsp;людей</a></li>
             </ul>
 
             <p class="slogan">Дети не должны жить в детдоме,
                 <br>они хотят остаться со своей мамой.
                 <br>Позвольте их мечтам сбываться!</p>
-            <a href="details-accounting.html" class="help">Помочь сейчас</a>
+            <a href="doc/details-accounting.html" class="help">Помочь сейчас</a>
         </div>
         <div class="middle-left-column">
             <span class="date">Май 2015г.</span>
@@ -39,7 +41,7 @@
             <span class="column-text">Общее число благополучателей за<br>1 год работы</span>
             <span class="num-2">52</span>
             <span class="column-text">семьи получили помощь</span>
-            <a href="details-accounting.html" class="support-us">Поддержать нас</a>
+            <a href="doc/details-accounting.html" class="support-us">Поддержать нас</a>
         </div>
         <div class="comment">
             <span class="comment-title">Отзывы</span>
@@ -107,8 +109,7 @@
                     </svg>
                 </a>
                 <a class="instagram" href="https://www.instagram.com/blagiedela/">
-                    <!--                    <?xml version="1.0" ?>-->
-                    <svg enable-background="new 0 0 32 32" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                      <svg enable-background="new 0 0 32 32" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <g id="Flat_copy">
                             <g>
                                 <path d="M16,0C7.163,0,0,7.163,0,16c0,8.836,7.163,16,16,16s16-7.164,16-16C32,7.163,24.837,0,16,0z" fill="#333333" />
